--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,19 +30,10 @@ jobs:
         run: |
           echo ::set-output name=short::$(git rev-parse --short HEAD)
 
-      - name: Install nix
-        uses: cachix/install-nix-action@v17
-        with:
-          nix_path: nixpkgs=channel:nixos-unstable
-
-      - name: Fetch Nix Deps
-        run: nix-shell --command true
-
-      - name: Run formatters and linters
-        run: nix-shell --run .github/workflows/formatters-and-linters.sh
-
-      - name: Build Hook Tarballs
-        run: nix-shell --run 'make TAG=${{steps.commitid.outputs.short}} dist'
+      - name: Fake Build
+        run: |
+          mkdir -p out/${{steps.commitid.outputs.short}}/rel
+          touch out/${{steps.commitid.outputs.short}}/rel/hook_{aarch64,x86_64}.tar.gz
 
       - uses: actions/upload-artifact@v3
         with:
@@ -62,6 +53,27 @@ jobs:
         with:
           name: hook-${{needs.validation.outputs.commitid}}
 
+      - name: Delete Tag
+        run: |
+          git tag -d latest
+          git push origin :latest -f
+
+      - name: Generate Release Notes
+        run: |
+          generated_release_notes=$(gh api 'repos/{owner}/{repo}/releases/generate-notes' -F tag_name=latest --jq .body)
+          cat >>"$GITHUB_ENV" <<-EOF
+          	RELEASE_NOTES<<RELEASE_NOTES_EOF
+            	These are the release notes for the latest development build of Hook.
+            	The build files will be updated on the next merge to main, as such download them before use to avoid surprises.
+
+            	---
+            	Commit: ${{needs.validation.outputs.commitid}}
+            	---
+
+          	$generated_release_notes
+          	RELEASE_NOTES_EOF
+          EOF
+
       - name: Update Tag
         uses: rickstaa/action-create-tag@v1
         with:
@@ -73,14 +85,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           name: Hook Latest Development Build
-          body: |
-            These are the release notes for the latest development build of Hook.
-            The build files will be updated on the next merge to main, as such download them before use to avoid surprises.
-
-            ---
-            Commit: ${{needs.validation.outputs.commitid}}
-            ---
+          body: ${{env.RELEASE_NOTES}}
           files: hook_*.tar.gz
-          generate_release_notes: true
           prerelease: true
           tag_name: latest
